--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,39 +1,67 @@
 body {
-    max-width: 600px;
+    max-width: 37.5rem;
     margin: auto;
+    background-color: lightgray;
 }
 
 header {
-    display: grid;
-    grid-template-columns: 20% 80%;
-    border: solid;
-    border-radius: 10px;
-    background-color: darkblue;
+    /* display: grid; */
+    /* grid-template-columns: 20% 80%; */
+    /* border: solid; */
+    /* border-radius: 10px; */
+    background-color: navy;
 }
 
 img {
-    padding: 1rem;
-    align-self: center;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 1rem;
+    /* align-self: center; */
+    /* border-radius: 20%; */
 }
 
 header h1 {
     color: blanchedalmond;
-    align-self: center;
-    padding: 2rem;
-    font-size: 2.5rem;
+    /* align-self: center; */
+    /* padding: 2rem; */
+    text-align: center;
+    font-size: 1.5rem;
+}
+
+h1, h2 {
+    font-family: 'Merriweather Sans', sans-serif;
+}
+
+ul {
+    font-family: 'Ysabeau', sans-serif;
+    font-size: 2rem;
+    padding-left: 4rem;
+}
+
+footer {
+    /* margin-top: 15px; */
+    /* border: solid; */
+    background-color: navy;
+    /* border-radius: 10px; */
 }
 
 footer {
     margin-top: 15px;
-    border: solid;
-    background-color: darkblue;
-    border-radius: 10px;
+    padding-bottom: .3rem;
+    padding-top: .3rem;
 }
 
 footer p {
     color: blanchedalmond;
     text-align: center;
+    font-family: 'Merriweather Sans', sans-serif;
+    font-size: .6rem;
 }
+
+/* .ident {
+    padding-top: .5rem;
+} */
 
 .modifieddate {
     color: coral;
@@ -41,5 +69,9 @@ footer p {
 
 h2, main {
     border-bottom: solid darkgrey;
+}
+
+h2 {
+    padding-left: 1rem;
 }
 
