--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -4,11 +4,15 @@ body {
 }
 
 header, nav, main, footer {
-    max-width: 960px;
+    max-width: 1080px;
     margin: 0 auto;
 }
 
-h1, h2, h4  {
+.banner {
+    display: none;
+}
+
+h1, h2, h3  {
     font-family: "Barlow", sans-serif;
 }
 
@@ -20,6 +24,21 @@ header {
     justify-content: center;
     padding: 0;
     background-color: #8D9D90;
+    position: relative;
+}
+
+.banner {
+    width: 100%;
+    position: absolute;
+    top: 1rem;
+    text-align: center;
+    background-color: #FAE275;
+    color: #373795;
+}
+
+.banBtn {
+    border: none;
+    background: #FAE275;
 }
 
 #logo {
@@ -28,6 +47,7 @@ header {
     margin-right: auto;
     width: 20rem;
     padding: 0;
+    border-radius: 50px;
 }
 
 #hutch {
@@ -51,6 +71,7 @@ time {
     color: #FAE275;
     text-align: center;
     font-family: "Prompt", sans-serif;
+    padding-bottom: 0.4rem;
 }
 
 nav {
@@ -135,19 +156,105 @@ main {
     margin: 0 auto;
 }
 
-main section {
-    border: .5px solid #373795;
+main section, #spots, #join {
+    /* border: .5px solid #373795; */
+    border-radius: 18px;
     margin: 0.5rem;
     padding: 0 0.5rem;
-    font-size: 1.7rem;
+    font-size: 1.4rem;
 }
 
 main p {
     font-family: "Prompt", sans-serif;
 }
 
-.spot1 {
-    border-bottom: .5px solid #373795;
+.style {
+    background-color: #8D9D90;
+    color: #FAE275;
+    box-shadow: 2px 2px 8px #373795;
+    text-align: center;
+}
+
+#hero {
+    position: relative;
+}
+
+#hero h3 {
+    position: absolute;
+    left: 25px;
+    color: #FAE275;
+    z-index: 1;
+}
+
+#hero img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    position: relative;
+}
+
+#hero .action {
+    position: absolute;
+    bottom: 20px;
+    right: 20px;
+    font-family: "Prompt", sans-serif;
+    font-size: 1.5rem;
+    padding: 1rem;
+    border-radius: 15px;
+    background-color: #373795;
+    color: #D2D0D3;
+}
+
+.style h3 {
+    text-shadow: 3px 3px 5px #373795;
+}
+
+#weather {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    justify-content: center;
+}
+
+#spots {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 1rem;
+    padding-top: .5rem;
+    padding-bottom: .5rem;
+}
+
+.color {
+    background-color: #738e79;
+    border-radius: 18px;
+    padding: .3rem;
+    box-shadow: 3px 3px 5px #FAE275;
+
+}
+
+.spot3 {
+    display: none;
+}
+
+#join {
+    display: none;
+}
+
+.joinBtn {
+    width: 80%;
+    font-family: "Prompt", sans-serif;
+    padding: 1rem;
+    border-radius: 15px;
+    background-color: #373795;
+    color: #D2D0D3;
+
+}
+
+footer {
+    display: block;
+    text-align: center;
+    background-color: #8D9D90;
+    border-radius: 18px;
 }
 
 #ftlogo {
@@ -156,12 +263,9 @@ main p {
     margin-right: auto;
     width: 70%;
     padding: 0;
+    border-radius: 60px;
 }
-footer {
-    display: block;
-    text-align: center;
-    background-color: #8D9D90;
-}
+
 footer div p {
     line-height: .4rem;
     font-size: .9rem;
