--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -4,6 +4,7 @@
         grid-template-columns: 20% 1fr;
         padding: 0;
         row-gap: 1rem;
+        border-radius: 18px;
     }
 
     #logo {
@@ -25,6 +26,8 @@
         grid-row: 2/3;
         text-align: right;
         padding: 0;
+        border-bottom-right-radius: 18px;
+        border-bottom-left-radius: 18px;
     }
 
     .social {
@@ -50,15 +53,50 @@
     }
 
     main {
-        grid-template-columns: 1fr 1fr;
+        grid-template-columns: 1fr 30%;
     }
 
-    main section {
+    main section, #spots, #join {
         font-size: 1.2rem;
     }
 
-    #hero, #event, #weather, #news, #spots{
+    /* #hero, #event, #weather, #news, #spots {
         grid-column: 1/3;
+    } */
+
+    #hero {
+        grid-column: 1/3;
+    }
+
+    
+
+    #news {
+        grid-column: 1/3;
+        grid-row: 2/3;
+    }
+
+    #spots {
+        grid-column: 1/3;
+        grid-row: 3/4;
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 1rem;
+        padding-bottom: .5rem;
+    }
+
+    .spot1 {
+        grid-column: 1/2;
+        border-bottom: none;
+    }
+
+    .spot2 {
+        grid-column: 2/3;
+    }
+
+    #join {
+        display: block;
+        grid-column: 1/3;
+        grid-row: 4/5;
     }
 
     footer {
