--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -82,6 +82,10 @@
         grid-row: 1/3;
     }
 
+    #hero h3 {
+        font-size: 2.0rem;
+    }
+
     #event {
         grid-column: 1/2;
         grid-row: 1/2;
@@ -124,8 +128,6 @@
     .spot3 {
         display: block;
         grid-row: 4/5;
-        /* border: 0.5px solid; */
-        padding: 0.3rem;
     }
 
 }
