--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -41,7 +41,7 @@
     time {
         grid-column: 1/3;
         grid-row: 2/3;
-        color: #D2D0D3;
+        color: #373795;
         z-index: 1;
         text-align: left;
         padding-left: .5rem;
@@ -60,15 +60,13 @@
         font-size: 1.2rem;
     }
 
-    /* #hero, #event, #weather, #news, #spots {
-        grid-column: 1/3;
-    } */
-
     #hero {
         grid-column: 1/3;
     }
 
-    
+    #hero h3 {
+        font-size: 3.0rem;
+    }
 
     #news {
         grid-column: 1/3;
@@ -81,6 +79,7 @@
         display: grid;
         grid-template-columns: 1fr 1fr;
         gap: 1rem;
+        padding-top: .5rem;
         padding-bottom: .5rem;
     }
 
@@ -97,6 +96,7 @@
         display: block;
         grid-column: 1/3;
         grid-row: 4/5;
+        padding-top: .5rem;
     }
 
     footer {
