Change color of date

--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -41,7 +41,7 @@
     time {
         grid-column: 1/3;
         grid-row: 2/3;
-        color: #373795;
+        color: #FAE275;
         z-index: 1;
         text-align: left;
         padding-left: .5rem;
