--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -47,8 +47,7 @@ header {
     margin-left: auto;
     margin-right: auto;
     width: 20rem;
-    padding: 0;
-    border-radius: 50px;
+    border-radius: 50%;
 }
 
 #hutch {
@@ -225,10 +224,13 @@ main p {
 }
 
 #weather {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
     align-items: center;
     justify-content: center;
+}
+
+#weather p:nth-child(3) {
+    padding: .3rem;
+    border-bottom: 1px solid #FAE275;
 }
 
 #spots {
@@ -288,8 +290,7 @@ footer {
     margin-left: auto;
     margin-right: auto;
     width: 70%;
-    padding: 0;
-    border-radius: 60px;
+    border-radius: 50%;
 }
 
 footer div p {
