--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -283,13 +283,14 @@ footer {
     text-align: center;
     background-image: linear-gradient(#8D9D90, #738e79);
     border-radius: 18px;
+    padding-top: .6rem;
 }
 
-#ftlogo {
+.ftlogo {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 70%;
+    width: 30%;
     border-radius: 50%;
 }
 
