--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -99,6 +99,67 @@
         padding-top: .5rem;
     }
 
+    /* Main Discover */
+
+    #discover {
+        display: grid;
+        grid-template-columns: 450px 1fr;
+        justify-items: center;
+    }
+
+    #discover h1 {
+        grid-column: 1/3;
+    }
+
+    #info {
+        grid-column: 2/3;
+        position: relative;
+    }
+
+    .cap {
+        display: block;
+        text-align: center;
+    }
+
+    #info figure {
+        display: block;
+        grid-column: 1/4;
+        padding: 0;
+        margin: 0;
+        text-align: center;
+    }
+
+    #stats {
+        grid-column: 1/4;
+    }
+
+    #demo {
+        display: block;
+        background-color: #8D9D90;
+        color: #FAE275;
+        padding: 1.3rem;
+    }
+
+    .note {
+        font-size: .6rem;
+        color: #373795;
+    }
+
+    .blk {
+        padding: .2rem;
+        margin-top: .4rem;
+        line-height: .3rem;
+        background-color: #738e79;
+        border-radius: 20px;
+        box-shadow: 3px 3px 5px #FAE275;
+        font-size: 1.2rem;
+    }
+
+    .imgs img:hover {
+        box-shadow: 0 0 50px #373795;
+    }
+
+    /* Footer */
     footer {
         display: grid;
         grid-template-columns: 1fr 1fr 1fr;
