--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -126,4 +126,28 @@
         grid-row: 4/5;
     }
 
+    /* Main Join */
+    #joinpg {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+    }
+
+    #joinpg div {
+        font-size: 1.5rem;
+    }
+
+    #joinpg div {
+        grid-column: 1/3;
+    }
+
+    form {
+        grid-column: 1/2;
+        grid-row: 2/3;
+        max-width: 600px;
+    }
+
+    /* Directory */
+    .dirlist div {
+        padding-left: .7rem;
+    }
 }
