--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -143,7 +143,8 @@
     form {
         grid-column: 1/2;
         grid-row: 2/3;
-        max-width: 600px;
+        /* max-width: 600px; */
+        width: 400px;
     }
 
     /* Directory */
