--- a/chamber/styles/base.css
+++ b/chamber/styles/base.css
@@ -228,6 +228,24 @@ main p {
     justify-content: center;
 }
 
+.flexcon {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-content: space-between;
+    flex-wrap: wrap;
+    gap: 1rem;
+}
+
+.flexcon p {
+    align-self: center;
+}
+
+/* #weathericon {
+    width: 25%;
+    margin-right: 0;
+} */
+
 #weather p:nth-child(3) {
     padding: .3rem;
     border-bottom: 1px solid #FAE275;
