--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -189,6 +189,22 @@
         border-radius: 20px;
     }
 
+    tr:first-child th:first-child {
+        border-top-left-radius: 20px;
+    }
+    
+    tr:first-child th:last-child {
+        border-top-right-radius: 20px;
+    }
+
+    tr:last-child td:first-child {
+        border-bottom-left-radius: 20px;
+    }
+
+    tr:last-child td:last-child {
+        border-bottom-right-radius: 20px;
+    }
+
     .headings {
         background-color: #738e79;
         color: #D2D0D3;
@@ -241,5 +257,26 @@
         grid-column: 1/4;
         font-size: .8rem;
     }
+
+    #maincontact {
+        grid-template-columns: 1fr 1fr;
+    }
+
+    #maincontact h2 {
+        grid-column: 1/3;
+    }
+
+    #maincontact form {
+        grid-column: 1/2;
+        grid-row: 2/3;
+        margin-left: 4rem;
+    }
+
+    .contactinfo {
+        grid-column: 2/3;
+        grid-row: 2/3;
+        font-size: 1.5rem;
+    }
 }
+
 
